Overflow scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ strong {
 	font-size: 11px;
 	border-radius: 3px;
 	border:1px solid #b7c0cd;
-	overflow: scroll;
+	overflow: hidden;
 	box-shadow: inset 0 1px 5px rgba(0,0,0,.15);
 }
 .cal-event span {
@@ -241,6 +241,9 @@ strong {
 		display: block;
 		padding: 0;
 		text-align: right;
+	}
+	.cal-event {
+		overflow: scroll;
 	}
 }
 
